<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_lock"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/fourteen_fourty"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_46sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_time"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="center_horizontal"
            android:text="@string/ten_slash_seven_wen"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_17sdp" />

        <com.skyfishjy.library.RippleBackground xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:rb_color="@android:color/holo_green_light"
            app:rb_duration="3000"
            app:rb_radius="32dp"
            app:rb_rippleAmount="4"
            app:rb_scale="6">

            <ImageView
                android:id="@+id/centerImage"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerInParent="true"
                android:src="@drawable/img_battery" />
        </com.skyfishjy.library.RippleBackground>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/item_phone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/available_talk_time"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_talk_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/treety_and_treeteen"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/item_internet" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/available_internet_time"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_internet"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/nine_and_half"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/item_game" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/available_game_time"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_game"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/seven_and_twenty"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>