<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ActivityCool">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_fan"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_210sdp"
        android:layout_centerInParent="true"
        android:src="@drawable/item_fan1"
        app:civ_border_color="#FF101010"
        app:civ_border_width="3dp" />

    <RelativeLayout
        android:id="@+id/rl_successfully"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_successfully"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ahas_successfuly_cooled"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_19sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_successfully"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_do"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_91sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_degreC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:text="@string/oc"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_41sdp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_complete"
            android:layout_width="@dimen/_156sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_32sdp"
            android:background="@drawable/background_complete"
            android:text="@string/complite"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_17sdp"
            android:visibility="gone" />

    </RelativeLayout>


</RelativeLayout>