<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_16sdp">

        <ImageView
            android:id="@+id/img_screen"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_phone_iphone_black_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/charging_screen"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_9sdp" />

        <Switch
            android:id="@+id/switch_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorItemDisable" />

    <LinearLayout
        android:id="@+id/ll_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_16sdp">

        <ImageView
            android:id="@+id/img_notification"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_charging" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/notifications"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_9sdp" />

        <Switch
            android:id="@+id/switch_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorItemDisable" />

    <LinearLayout
        android:id="@+id/ll_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_16sdp">

        <ImageView
            android:id="@+id/img_bar"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_format_list_bulleted_black_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/notification_bar"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_9sdp" />

        <Switch
            android:id="@+id/switch_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorItemDisable" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorItemDisable" />

    <LinearLayout
        android:id="@+id/ll_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_16sdp">

        <ImageView
            android:id="@+id/img_update"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_file_download_black_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/check_for_update"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_9sdp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorItemDisable" />
</LinearLayout>