<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_54sdp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_power_saving"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_12sdp"
            android:src="@drawable/ic_access_time_black_24dp" />

        <TextView
            android:id="@+id/tv_power_saving"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/power_saving_mode"
            android:textColor="@color/white"
            android:textSize="@dimen/_9sdp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_power"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center_vertical"
            android:theme="@style/RadioButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_54sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_normal"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_12sdp"
            android:src="@drawable/item_normal_mode" />

        <TextView
            android:id="@+id/tv_normal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/normal_mode"
            android:textColor="@color/white"
            android:textSize="@dimen/_9sdp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_normal"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center_vertical"
            android:theme="@style/RadioButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_54sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_sleep"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_12sdp"
            android:src="@drawable/item_sleep_mode" />

        <TextView
            android:id="@+id/tv_sleep"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/sleep_mode"
            android:textColor="@color/white"
            android:textSize="@dimen/_9sdp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_sleep"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center_vertical"
            android:theme="@style/RadioButton" />
    </LinearLayout>
</LinearLayout>

</RelativeLayout>